// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> rendering should render nothing on incorrect param name 1`] = `
<div
  className="modal is-visible content"
>
  <div
    className="modal-container w-900 text-left"
  >
    <Link
      className="modal-close-btn"
      to="/default/login"
    >
      ✖
    </Link>
    <div
      className="message"
      dangerouslySetInnerHTML={
        {
          "__html": "",
        }
      }
    />
  </div>
</div>
`;

exports[`<Modal /> rendering should render nothing when request is bad 1`] = `
<div
  className="modal is-visible content"
>
  <div
    className="modal-container w-900 text-left"
  >
    <Link
      className="modal-close-btn"
      to="/default/login"
    >
      ✖
    </Link>
    <div
      className="message"
      dangerouslySetInnerHTML={
        {
          "__html": "",
        }
      }
    />
  </div>
</div>
`;

exports[`<Modal /> rendering should render privacy-policy correctly 1`] = `
<div
  className="modal is-visible content"
>
  <div
    className="modal-container w-900 text-left"
  >
    <Link
      className="modal-close-btn"
      to="/default/login"
    >
      ✖
    </Link>
    <div
      className="message"
      dangerouslySetInnerHTML={
        {
          "__html": "privacy policy modal content",
        }
      }
    />
  </div>
</div>
`;

exports[`<Modal /> rendering should render terms-and-conditions correctly 1`] = `
<div
  className="modal is-visible content"
>
  <div
    className="modal-container w-900 text-left"
  >
    <Link
      className="modal-close-btn"
      to="/default/login"
    >
      ✖
    </Link>
    <div
      className="message"
      dangerouslySetInnerHTML={
        {
          "__html": "t&c modal content",
        }
      }
    />
  </div>
</div>
`;
